--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,7 +9,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item"><a class="nav-link <%= locals.path === '/' ? 'active' : '' %>" href="/">Trang Chủ</a></li>
                 <li class="nav-item"><a class="nav-link <%= locals.path === '/room' ? 'active' : '' %>" href="/room">Phòng</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Tiện Nghi</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Dịch vụ</a></li>
                 <li class="nav-item"><a class="nav-link <%= locals.path === '/contact' ? 'active' : '' %>" href="/contact">Liên Hệ</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Giới Thiệu</a></li>
             </ul>
