--- a/views/newbookingroom.ejs
+++ b/views/newbookingroom.ejs
@@ -43,7 +43,7 @@
           <li class="nav-item"><a class="nav-link text-white" href="#">Đánh Giá</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="#">Phòng</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="#">Cơ Sở và Thiết Bị</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="#">Slided</a></li>
+          <!--<li class="nav-item"><a class="nav-link text-white" href="#">Slided</a></li>-->
           <li class="nav-item"><a class="nav-link text-white" href="#">Thiết Lập</a></li>
         </ul>
       </aside>
