--- a/views/info.ejs
+++ b/views/info.ejs
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="/css/info.css">
 </head>
 <body>
+    <!-- Flash message -->
+    <% if (success_msg && success_msg.length > 0) { %>
+      <div id="flash-message" class="position-fixed top-0 start-50 translate-middle-x mt-3" style="z-index: 9999; min-width: 300px;">
+        <div class="alert alert-success text-center shadow"><%= success_msg %></div>
+      </div>
+    <% } %>
+    <% if (error_msg && error_msg.length > 0) { %>
+      <div id="flash-message" class="position-fixed top-0 start-50 translate-middle-x mt-3" style="z-index: 9999; min-width: 300px;">
+        <div class="alert alert-danger text-center shadow"><%= error_msg %></div>
+      </div>
+    <% } %>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
@@ -108,6 +119,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
+        setTimeout(() => {
+          const msg = document.getElementById('flash-message');
+          if (msg) msg.remove();
+        }, 3000);
         document.getElementById('avatar-input').onchange = function() {
             if (this.files && this.files[0]) {
                 const reader = new FileReader();
