--- a/views/room_detail.ejs
+++ b/views/room_detail.ejs
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body class="bg-light">
-    <%- include('header') %>
+    <%- include('navbar') %>
     <div class="container-fluid py-4">
       <div class="room-detail-container">
           <div class="mb-4">
