--- a/views/service.ejs
+++ b/views/service.ejs
@@ -25,6 +25,7 @@
     </style>
 </head>
 <body>
+    <%- include('navbar') %>
     <div class="container py-5">
         <h2 class="text-center mb-4">Dịch Vụ Của Chúng Tôi</h2>
         <div class="row g-4">
